<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".signup_page"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="109dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/name_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name_signup"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/number_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/number_signup"
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_signup"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_signup"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passconfirm_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passconfirm_signup"
        android:inputType="textPassword" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="504dp"
        tools:ignore="MissingConstraints"
        android:id="@+id/radio_group">

        <RadioButton
            android:id="@+id/male_signup"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="Male" />

        <RadioButton
            android:id="@+id/female_signup"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="Female" />

        <RadioButton
            android:id="@+id/other_signup"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="Other" />
    </RadioGroup>

    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#0388c3"
        android:text="@string/signup_signup_button"
        tools:ignore="NotSibling" />


</LinearLayout>


